# GiftBook

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  recognize.py  rename.py  s3.py  streamlit.py  testai.py
