[project]
name = "giftbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.51",
    "openai>=2.1.0",
    "piexif>=1.1.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
